--- a/motivation.html
+++ b/motivation.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Motivation
-menus: header
 permalink: "/motivation"
+menus:
+  header:
+    title: Motivation
+    weight: 3
 ---
