--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,27 @@
 ---
 layout: default
 title: Blog
-menus: header
 permalink: "/blog"
+menus:
+  header:
+    title: Blog
+    weight: 2
 ---
+
+<!-- first post -->
+{% assign first_post = site.posts.first %}
+<div class="d-flex flex-column justify-content-center align-items-start" id="hero">
+	<a href="{{first_post.url}}" class="post-first-image-container">
+		<img src="/assets/images/lazy.jpg" data-src="{{first_post.featured_image}}" class="lazy">
+	</a>
+	{% include blog_post/first_post.html post=first_post %}
+</div>
+
+<!-- other posts -->
+<div class="container d-flex flex-column align-items-center">
+	{% for post in site.posts %}
+		{% unless forloop.first %}
+			{% include blog_post/card.html post=post %}
+		{% endunless %}
+	{% endfor %}
+</div>
