--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ menus:
     weight: 1
 ---
 
-
-<h1>home page still in progress</h1>
+<div class="container">
+	<h1>home page still in progress!</h1>
+</div>
