--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,10 @@ menus:
 		</div>
 		<div class="first-post-content content">
 			{{first_post.content}}
+			<div class="share-bar">
+				<h4>Share this</h4>
+				{% include share-icons.html %}
+			</div>
 		</div>
 	</div>
 	
