--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: master
 title: Home
 menus:
   header:
@@ -7,6 +7,83 @@ menus:
     weight: 1
 ---
 
-<div class="container">
-	<h1>home page still in progress!</h1>
+<div id="home-carousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100 h-100 lazy" src="/assets/images/lazy.jpg" data-src="/assets/images/1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-100 lazy" src="/assets/images/lazy.jpg" data-src="/assets/images/2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-100 lazy" src="/assets/images/lazy.jpg" data-src="/assets/images/3.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#home-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#home-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
+
+<section id="about">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-6">
+				<div class="home-section-image-container">
+					<img src="/assets/images/lazy.jpg" data-src="/uploads/about_me.jpeg" class="lazy pink-box-shadow-left">
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="home-section-text">
+					<h2>Hi, I'm Aminata</h2>
+					<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Etiam porta sem malesuada magna mollis euismod. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor.</p>
+					<!-- <a class="button home-button" href="/about">Learn More</a> -->
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="section-2" class="pink-bg">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-6">
+				<div class="home-section-text">
+					<h2>Section 2</h2>
+					<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Etiam porta sem malesuada magna mollis euismod. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor.</p>
+					<!-- <a class="button home-button" href="/about">Learn More</a> -->
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="home-section-image-container">
+					<img src="/assets/images/lazy.jpg" data-src="/assets/images/demo-landscape.jpg" class="lazy pink-box-shadow-right">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="blog">
+	<div class="container">
+		<h1 class="home-section-title">Latest Blog Post</h1>
+		{% include blog_post/card.html post=site.posts.first %}
+		<div class="button-center-container">
+			<a href="/blog" class="button">See More Posts</a>
+		</div>
+	</div>
+</section>
+
+<section id="inspiration" class="pink-bg">
+	<div class="container">
+		<h1 class="home-section-title">Daily Inspiration</h1>
+		{% include motivation/card.html item=site.motivation.first %}
+		<div class="button-center-container daily-inspiration-see-more-button">
+			<a href="/inspiration" class="button">See More</a>
+		</div>
+	</div>
+</section>
