--- a/inspiration.html
+++ b/inspiration.html
@@ -2,22 +2,31 @@
 layout: default
 title: Inspiration
 permalink: "/inspiration"
+js_file: "/assets/js/inspiration.js"
+pagination: 
+  enabled: true
+  collection: motivation
+  permalink: "/:num/"
 ---
 <div class="first-post-background"></div>
 <div class="container">
 	<h1 class="page-title">Inspiration</h1>
-	<div class="row">
-		{% for item in site.motivation %}
-			<div class="w-100 {% cycle 'col-xs-12 motivation-1',
-								 'col-md-6 motivation-2', 'col-md-6 motivation-2', %}">
-				{% include motivation/card.html
-					quote=item.quote
-					author=item.author
-					image=item.image
-					url=item.url
-					image_scale="true"
-				%}
+	<div class="row inspiration-row">
+		{% for item in paginator.posts %}
+			<div class="w-100 motivation-infinite-scroll-append
+							{% cycle 'col-xs-12 motivation-1',
+								 'col-lg-6 motivation-2', 'col-lg-6 motivation-2', %}">
+				<a href="{{item.url}}">
+					{% include motivation/card.html
+						quote=item.quote
+						author=item.author
+						image=item.image
+						url=item.url
+						image_scale="true"
+					%}
+				</a>
 			</div>     
 		{% endfor %}
 	</div>
 </div>
+
