--- a/inspiration.html
+++ b/inspiration.html
@@ -8,7 +8,7 @@ pagination:
   collection: motivation
   permalink: "/:num/"
 ---
-<div class="first-post-background"></div>
+<div class="pink-background"></div>
 <div class="container">
 	<h1 class="page-title">Inspiration</h1>
 	<div class="row inspiration-row">
@@ -27,6 +27,7 @@ pagination:
 				</a>
 			</div>     
 		{% endfor %}
+
 	</div>
 </div>
 
