fix pagination on blog

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ carousel:
 					<div class="home-section-text">
 						<h2>Hi, I'm Aminata</h2>
 						<p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Etiam porta sem malesuada magna mollis euismod. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor.</p>
-						<!-- <a class="button home-button" href="/about">Learn More</a> -->
+						<a class="button button-large-padding" href="/about">About Me</a>
 					</div>
 				</div>
 			</div>
