--- a/inspiration.html
+++ b/inspiration.html
@@ -3,12 +3,12 @@ layout: default
 title: Inspiration
 permalink: "/inspiration"
 js_file: "/assets/js/inspiration.js"
+pink_background: true
 pagination: 
   enabled: true
   collection: motivation
   permalink: "/:num/"
 ---
-<div class="pink-background"></div>
 <div class="container">
 	<h1 class="page-title">Inspiration</h1>
 	<div class="row inspiration-row">
