--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 ---
 layout: default
 ---
-<h1>Page Not Found</h1>
-<p>We couldn't find that page!</p>
+<div class="container-widths">
+	<h1>Page Not Found</h1>
+	<p>We couldn't find that page!</p>
+</div>
