--- a/_static/index.html
+++ b/_static/index.html
@@ -12,20 +12,26 @@ page_sections:
     mini_title: Featured on the blog
     text: Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean
       lacinia bibendum nulla sed consectetur.
-    url: "/blog"
+    button:
+        text: Read More
+        link: "/blog"
   - background_image: "/uploads/2.jpg"
     title: Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
       ut fermentum massa justo sit amet risus
     mini_title: Vestibulum Vehicula Dolor Mattis
     text: Etiam porta sem malesuada magna mollis euismod. Sed posuere consectetur
       est at lobortis.
-    url: "/blog"
+    button:
+        text: Read More
+        link: "/blog"
   - background_image: "/uploads/3.jpg"
     title: Cras mattis consectetur purus sit amet fermentum
     mini_title: Featured on the blog
     text: Donec id elit non mi porta gravida at eget metus. Lorem ipsum dolor sit
       amet, consectetur adipiscing elit.
-    url: "/blog"
+    button:
+        text: Read More
+        link: "/blog"
 - template: image-left-text-right
   id: about
   background_color: white
@@ -42,7 +48,7 @@ page_sections:
 - template: image-right-text-left
   id: section_2
   background_color: pink
-  image: "/uploads/demo-landscape.jpg"
+  image: "/uploads/6.jpg"
   title: Section 2
   text: Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel
     augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis
@@ -57,13 +63,11 @@ page_sections:
   background_color: pink
 - template: centered-text-w-bg-image
   id: cta
-  background_image: "/uploads/demo-landscape.jpg"
+  background_image: "/uploads/7.jpg"
   title: Section 2
   text: Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel
     augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis
     ornare vel eu leo. Etiam porta sem malesuada magna mollis euismod. Morbi leo risus,
     porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum.
     Curabitur blandit tempus porttitor.
-published: false
-
 ---
