add popup newsletter

--- a/_dynamic/blog.html
+++ b/_dynamic/blog.html
@@ -2,7 +2,8 @@
 layout: default
 title: Blog
 permalink: "/blog"
-js_file: "/assets/js/blog.js"
+js_files:
+- "/assets/js/blog.js"
 pagination: 
   enabled: true
   collection: posts
