--- a/_dynamic/inspiration.html
+++ b/_dynamic/inspiration.html
@@ -2,7 +2,8 @@
 layout: default
 title: Inspiration
 permalink: "/inspiration"
-js_file: "/assets/js/inspiration.js"
+js_files:
+- "/assets/js/inspiration.js"
 pink_background: true
 pagination: 
   enabled: true
