--- a/_dynamic/blog.html
+++ b/_dynamic/blog.html
@@ -24,5 +24,6 @@ pagination:
 				{% include blog_post/card.html post=post container_class="blog-post-card-container" %}
 			{% endunless %}
 		{% endfor %}
+		{{ site.data.general.adsense_code }}
 	</div>
 </div>
